--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet/less" type="text/css" href="/assets/css/index.less" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta property="og:title" content="AIBooru.zip" />
+    <meta name="twitter:description" content="Userscripts for AIBooru">
+    <meta property="og:type" content="Userscripts for AIBooru" />
+    <meta property="og:description" content="Userscripts for AIBooru">
+    <meta property="og:url" content="https://foxgirls.club/" />
     <script src="/assets/js/less.js" type="text/javascript"></script>
     <script src="/assets/js/index.js"></script>
     <title>AIBooru.zip</title>
