--- a/freenitro/index.html
+++ b/freenitro/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fox Girls Club</title>
+    <title>Discord Nitro Gift</title>
     <meta property="og:title" content="Free Nitro!" />
     <meta name="twitter:description" content="Discord Nitro Gift">
     <meta property="og:type" content="Free Nitro!" />
