forgot to change the domain

--- a/freenitro/index.html
+++ b/freenitro/index.html
@@ -9,8 +9,8 @@
     <meta property="og:type" content="Free Nitro!" />
     <meta property="og:description" content="Discord Nitro Gift">
     <meta property="og:url" content="https://aibooru.zip/freenitro/" />
-    <meta property="og:image" content="https://foxgirls.club/assets/img/nitro.png" />
-    <meta name="twitter:image" content="https://foxgirls.club/assets/img/nitro.png">
+    <meta property="og:image" content="https://aibooru.zip/assets/img/nitro.png" />
+    <meta name="twitter:image" content="https://aibooru.zip/assets/img/nitro.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Discord Nitro Gift">
 
